<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_light_background"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_light_background"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_option"
            tools:ignore="ContentDescription" />

        <TextView
            android:textColor="@color/theme_dark_background"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp"
            android:layout_marginStart="8dp"
            android:text="@string/about"
            android:textFontWeight="500" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_below="@id/header"
        android:layout_height="1dp"
        android:background="@color/theme_light_component_outline" />


    <ImageView
        android:id="@+id/logo"
        android:layout_above="@id/message"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:src="@drawable/twozo_logo"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/content_view"
        android:layout_marginBottom="48dp"
        android:text="Copyright © Twozo Technologies Private Ltd."
        android:textColor="@color/theme_light_sub_title_font"
        android:textFontWeight="400" />

    <androidx.cardview.widget.CardView
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_view_outline"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/theme_dark_background"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/twozo_description"
                android:textFontWeight="400" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            android:paddingVertical="12dp"
            android:textColor="@color/theme_light_secondary"
            android:textSize="16sp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:textAlignment="textEnd"
            android:paddingVertical="12dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/theme_light_secondary"
            android:textSize="16sp"
            android:clickable="true"/>

    </RelativeLayout>


</RelativeLayout>